fix @import css file to .less file

--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,5 +1,5 @@
 @import "bootstrap/bootstrap";
 @import "//fonts.googleapis.com/css?family=Roboto:400,300";
 @import "fontawesome/font-awesome";
-@import "animate/animate.css";
+@import (less) "animate/animate.css";
 @font-family-sans-serif: "Times New Roman", Helvetica, Arial, sans-serif;
