--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -3,3 +3,4 @@
 @import "fontawesome/font-awesome";
 @import (less) "animate/animate.css";
 @font-family-sans-serif: "Times New Roman", Helvetica, Arial, sans-serif;
+@navbar-height: 41px;
