--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -4,3 +4,24 @@
 @import (less) "animate/animate.css";
 @font-family-sans-serif: "Times New Roman", Helvetica, Arial, sans-serif;
 @navbar-height: 41px;
+@navbar-default-color: #fff;
+@navbar-default-link-color: #232323;
+@navbar-default-link-hover-color: #e7745c;
+@navbar-default-link-active-color: #232323;
+@navbar-default-link-active-bg: #e7745c;
+@navbar-default-bg: #fff;
+@navbar-default-border: #fff;
+@navbar-border-radius: 0;
+
+@carousel-control-opacity: 0.8;
+@carousel-control-width: 10%;
+
+@input-border-radius: 0;
+@input-group-addon-bg: #fff;
+@input-group-addon-border-color: #fff;
+@input-border: #fff;
+@input-border-focus: #fff;
+@input-color: #333333;
+@list-group-border-radius: 0px;
+
+@badge-border-radius: 100%;
