--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,8 +150,7 @@ footer a {
     z-index: 2;
     position:  absolute;
     width: 100%;
-    box-shadow: inset 0 0 5px #000;
-    box-shadow: inset 0 0 5px rgba(0,0,0,0.67);
+    box-shadow: inset 0 5px 5px -5px rgba(0,0,0,0.67);
     background: rgba(104, 161, 154, 1);
     padding: 0 6px 6px 10px;
     font-size: 13px;
@@ -184,14 +183,16 @@ footer a {
   background-color: rgba(255, 255, 255, 0.0);
   border: none;
   margin: 15px 0px 0px 0px;
+  cursor: pointer;
+  box-shadow: none;
 }
-#switch > a {
+#switch > i {
   font-size: 16px;
   color: white;
 }
 /*result collum*/
 .list-result {
-  box-shadow: rgba(0, 0, 0, 0.2) 4px 0px 4px, rgba(0, 0, 0, 0.2) -1px 0px 4px;
+  box-shadow: rgba(0, 0, 0, 0.2) 4px 2px 4px, rgba(0, 0, 0, 0.2) -4px 2px 4px;
   position: absolute;
   z-index: 5;
   left: 0;
@@ -635,6 +636,46 @@ ul li {
     outline: none;
     border-color: #78aba5;
 }
+.search-date .month {
+    color: #333333;
+    font-size: 14px;
+    font-family: firasans-regular;
+    font-weight: 400;
+    position: absolute;
+    top: 3px;
+    left: 0;
+    right: 0;
+}
+.search-date-cover .day {
+    color: #68a19a;
+    font-size: 45px;
+    line-height: 40px;
+    font-family: firasans-bold;
+    font-weight: 700;
+    position: absolute;
+    top: 26px;
+    left: 0;
+    right: 0;
+}
+.search-date-cover .dayofweek {
+    color: #333333;
+    font-size: 14px;
+    font-family: firasans-medium;
+    font-weight: 400;
+    position: absolute;
+    bottom: 4px;
+    left: 0;
+    right: 0;
+}
+.date-depart:hover .month, .date-depart:hover .dayofweek {
+  color: #68a19a;
+}
+.date-return > span {
+  font-size: 40px;
+  font-weight: 500;
+  vertical-align: middle;
+  color: #68a19a;
+}
 .stripe {
   background: repeating-linear-gradient(
     -45deg,
@@ -697,6 +738,7 @@ ul li {
 }
 .people-selector .dropdown-toggle {
     padding-left: 28px;
+    height: 47px;
     line-height: 47px;
     font-size: 15px;
     position: relative;
@@ -962,15 +1004,53 @@ ul li {
     background-image: none !important;
     height: 0px;
 }
-/*.pac-icon {
-  width: 20px;
-  height: 20px;
-  margin-right: 10px;
-  margin-top: 5px;
-  display: inline-block;
-  vertical-align: top;
-  background-image: url('/images/city-icon.png');
-  background-size:     cover; 
-  background-repeat:   no-repeat;
-  background-position: center center;
-}*/
+
+/*date picker style*/
+.ui-datepicker {
+  z-index: 1000 !important;
+}
+
+/*Modal customize style*/
+#planeModal {
+  top: calc(43px + 60px) !important;
+  padding-left: 0px !important;
+  width: 770px !important;
+}
+
+#planeModal .modal-dialog {
+  margin: 0px 0px 0px 10px !important;
+  width: 100% !important;
+}
+
+#planeModal .modal-dialog .modal-content {
+  height: 1000px;
+  width: 750px !important;
+  border-radius: 0;
+  border: none;
+  box-shadow: none !important;
+}
+.modal-backdrop {
+  top: calc(43px + 60px) !important;
+  width: 10px;
+}
+.modal.fade .modal-dialog {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    left: -300px;
+    opacity: 0;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.modal.fade.in .modal-dialog {
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    transform: scale(1);
+    -webkit-transform: translate3d(300px, 0, 0);
+    transform: translate3d(300px, 0, 0);
+    opacity: 1;
+}
