--- a/resources/assets/less/app.less
+++ b/resources/assets/less/app.less
@@ -1,6 +1,6 @@
-@import "bootstrap/bootstrap";
+@import "bootstrap/bootstrap.less";
 @import "//fonts.googleapis.com/css?family=Roboto:400,300";
-@import "fontawesome/font-awesome";
+@import "fontawesome/font-awesome.less";
 @import (less) "animate/animate.css";
 @font-family-sans-serif: "Times New Roman", Helvetica, Arial, sans-serif;
 @navbar-height: 41px;
