--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1869,19 +1869,19 @@ p.car-class {
 #loginModal .modal-header,  #registerModal .modal-header {
   background: #68a19a !important;
 } 
-#formLogin .form-control, #formRegister .form-control,.mergin-top input {
+#accordion .form-control, #formLogin .form-control, #formRegister .form-control,.margin-top input {
   border-color: #ccc !important;
 }
-#formLogin .form-control:focus , #formRegister .form-control:focus,.mergin-top input:focus {
+#accordion .form-control:hover, #formLogin .form-control:focus , #formRegister .form-control:focus,.margin-top input:focus {
   border-color: #68a19a !important;
 }
  
-#formLogin button, #formRegister button,.mergin-top button {
+#accordion button, #formLogin button, #formRegister button,.margin-top button {
   background: #68a19a !important;
   border-radius: 0;
   border: none;
 }
-#formLogin button:hover, #formRegister button:hover,.mergin-top button:hover {
+#accordion button:hover, #formLogin button:hover, #formRegister button:hover,.margin-top button:hover {
   background: #e7745c !important;
 }
 #register, #login {
@@ -1893,7 +1893,211 @@ p.car-class {
 #loginModal .modal-body .clearfix, #registerModal .modal-body .clearfix{
   margin-bottom: 20px;
 }
-.mergin-top {
+.margin-top {
   padding-top: 200px;
   margin-bottom: 200px;
+}
+
+/*collapse panel*/
+.timeline {
+    list-style: none;
+    padding: 20px 0 20px;
+    position: relative;
+    margin-bottom: 50px;
+}
+
+.timeline:before {
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 3px;
+    background-color: #eeeeee;
+    margin-left: -1.5px;
+}
+
+.timeline > li {
+  margin-bottom: 20px;
+  position: relative;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+}
+
+.timeline > li > .timeline-panel {
+  width: 100%;
+  float: left;
+  border: 1px solid #d4d4d4;
+  border-radius: 2px;
+  padding: 20px;
+  position: relative;
+  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+}
+
+.timeline > li > .timeline-panel:before {
+    position: absolute;
+    top: 26px;
+    right: -15px;
+    display: inline-block;
+    border-top: 15px solid transparent;
+    border-left: 15px solid #ccc;
+    border-right: 0 solid #ccc;
+    border-bottom: 15px solid transparent;
+    content: " ";
+}
+
+.timeline > li > .timeline-panel:after {
+    position: absolute;
+    top: 27px;
+    right: -14px;
+    display: inline-block;
+    border-top: 14px solid transparent;
+    border-left: 14px solid #fff;
+    border-right: 0 solid #fff;
+    border-bottom: 14px solid transparent;
+    content: " ";
+}
+
+.timeline > li > .timeline-badge {
+  color: #fff;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  font-size: 1.4em;
+  text-align: center;
+  position: absolute;
+  top: 16px;
+  margin-left: -25px;
+  background-color: #999999;
+  z-index: 100;
+  border-top-right-radius: 50%;
+  border-top-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+  margin-left: 40px;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
+}
+
+.timeline-badge.primary {
+    background-color: #2e6da4 !important;
+}
+
+.timeline-badge.success {
+    background-color: #3f903f !important;
+}
+
+.timeline-badge.flight {
+    background-color: #04c9a6 !important;
+}
+
+.timeline-badge.danger {
+    background-color: #d9534f !important;
+}
+
+.timeline-badge.info {
+    background-color: #5bc0de !important;
+}
+
+.timeline-title {
+    margin-top: 0;
+    color: inherit;
+}
+
+.timeline-body > p,
+.timeline-body > ul {
+    margin-bottom: 0;
+}
+
+.timeline-body > p + p {
+    margin-top: 5px;
+}
+
+@media (max-width: 767px) {
+    ul.timeline:before {
+        left: 40px;
+    }
+
+    ul.timeline > li > .timeline-panel {
+        width: calc(100% - 90px);
+        width: -moz-calc(100% - 90px);
+        width: -webkit-calc(100% - 90px);
+    }
+
+    ul.timeline > li > .timeline-badge {
+        left: 15px;
+        margin-left: 0;
+        top: 16px;
+    }
+
+    ul.timeline > li > .timeline-panel {
+        float: right;
+    }
+
+    ul.timeline > li > .timeline-panel:before {
+        border-left-width: 0;
+        border-right-width: 15px;
+        left: -15px;
+        right: auto;
+    }
+
+    ul.timeline > li > .timeline-panel:after {
+        border-left-width: 0;
+        border-right-width: 14px;
+        left: -14px;
+        right: auto;
+    }
+}
+
+.panel.panel-default a {
+  color: #e7745c;
+}
+.panel.panel-default a:hover {
+  color: #68a19a;
+}
+.timeline .panel.panel-default {
+  border: 1px dashed #68a19a;
+}
+.timeline .panel-heading {
+  border-bottom: 1px dashed #68a19a;
+}
+#accordion {
+  margin-bottom: 0;
+}
+#flight-booking .panel-body, #flight-booking .details-row {
+  padding: 0;
+  border: none;
 }
